@@ -40,7 +40,9 @@ public final class Method extends Metadata {
     /**
      * Used with a proxy that can dynamically switch to being a tunnel.
      * 
-     * @see <a href="http://www.w3.org/Protocols/rfc2616/rfc2616-sec9.html#sec9.9">HTTP RFC - 9.9 CONNECT</a>
+     * @see <a
+     *      href="http://www.w3.org/Protocols/rfc2616/rfc2616-sec9.html#sec9.9">HTTP
+     *      RFC - 9.9 CONNECT</a>
      */
     public static final Method CONNECT = new Method("CONNECT",
             "Used with a proxy that can dynamically switch to being a tunnel",
@@ -51,7 +53,9 @@ public final class Method extends Metadata {
      * Request-URI, in the destination resource, identified by the URI in the
      * Destination header.
      * 
-     * @see <a href="http://www.webdav.org/specs/rfc2518.html#METHOD_COPY">WEBDAV RFC - 8.8 COPY Method</a>
+     * @see <a
+     *      href="http://www.webdav.org/specs/rfc2518.html#METHOD_COPY">WEBDAV
+     *      RFC - 8.8 COPY Method</a>
      */
     public static final Method COPY = new Method(
             "COPY",
@@ -62,7 +66,9 @@ public final class Method extends Metadata {
      * Requests that the origin server deletes the resource identified by the
      * request URI.
      * 
-     * @see <a href="http://www.w3.org/Protocols/rfc2616/rfc2616-sec9.html#sec9.7">HTTP RFC - 9.7 DELETE</a>
+     * @see <a
+     *      href="http://www.w3.org/Protocols/rfc2616/rfc2616-sec9.html#sec9.7">HTTP
+     *      RFC - 9.7 DELETE</a>
      */
     public static final Method DELETE = new Method(
             "DELETE",
@@ -73,7 +79,9 @@ public final class Method extends Metadata {
      * Retrieves whatever information (in the form of an entity) that is
      * identified by the request URI.
      * 
-     * @see <a href="http://www.w3.org/Protocols/rfc2616/rfc2616-sec9.html#sec9.3">HTTP RFC - 9.3 GET</a>
+     * @see <a
+     *      href="http://www.w3.org/Protocols/rfc2616/rfc2616-sec9.html#sec9.3">HTTP
+     *      RFC - 9.3 GET</a>
      */
     public static final Method GET = new Method(
             "GET",
@@ -84,7 +92,9 @@ public final class Method extends Metadata {
      * Identical to GET except that the server must not return a message body in
      * the response but only the message header.
      * 
-     * @see <a href="http://www.w3.org/Protocols/rfc2616/rfc2616-sec9.html#sec9.4">HTTP RFC - 9.4 GET</a>
+     * @see <a
+     *      href="http://www.w3.org/Protocols/rfc2616/rfc2616-sec9.html#sec9.4">HTTP
+     *      RFC - 9.4 GET</a>
      */
     public static final Method HEAD = new Method(
             "HEAD",
@@ -95,7 +105,9 @@ public final class Method extends Metadata {
      * Used to take out a lock of any access type on the resource identified by
      * the request URI.
      * 
-     * @see <a href="http://www.webdav.org/specs/rfc2518.html#METHOD_LOCK">WEBDAV RFC - 8.10 LOCK Method</a>
+     * @see <a
+     *      href="http://www.webdav.org/specs/rfc2518.html#METHOD_LOCK">WEBDAV
+     *      RFC - 8.10 LOCK Method</a>
      */
     public static final Method LOCK = new Method("LOCK",
             "Used to take out a lock of any access type (WebDAV)", BASE_WEBDAV
@@ -105,7 +117,9 @@ public final class Method extends Metadata {
      * MKCOL creates a new collection resource at the location specified by the
      * Request URI.
      * 
-     * @see <a href="http://www.webdav.org/specs/rfc2518.html#METHOD_MKCOL">WEBDAV RFC - 8.3 MKCOL Method</a>
+     * @see <a
+     *      href="http://www.webdav.org/specs/rfc2518.html#METHOD_MKCOL">WEBDAV
+     *      RFC - 8.3 MKCOL Method</a>
      */
     public static final Method MKCOL = new Method("MKCOL",
             "Used to create a new collection (WebDAV)", BASE_WEBDAV
@@ -116,7 +130,9 @@ public final class Method extends Metadata {
      * processing, followed by a delete of the source where all three actions
      * are performed atomically.
      * 
-     * @see <a href="http://www.webdav.org/specs/rfc2518.html#METHOD_MOVE">WEBDAV RFC - 8.3 MKCOL Method</a>
+     * @see <a
+     *      href="http://www.webdav.org/specs/rfc2518.html#METHOD_MOVE">WEBDAV
+     *      RFC - 8.3 MKCOL Method</a>
      */
     public static final Method MOVE = new Method(
             "MOVE",
@@ -127,7 +143,9 @@ public final class Method extends Metadata {
      * Requests for information about the communication options available on the
      * request/response chain identified by the URI.
      * 
-     * @see <a href="http://www.w3.org/Protocols/rfc2616/rfc2616-sec9.html#sec9.2">HTTP RFC - 9.2 OPTIONS</a>
+     * @see <a
+     *      href="http://www.w3.org/Protocols/rfc2616/rfc2616-sec9.html#sec9.2">HTTP
+     *      RFC - 9.2 OPTIONS</a>
      */
     public static final Method OPTIONS = new Method(
             "OPTIONS",
@@ -139,7 +157,9 @@ public final class Method extends Metadata {
      * request as a new subordinate of the resource identified by the request
      * URI.
      * 
-     * @see <a href="http://www.w3.org/Protocols/rfc2616/rfc2616-sec9.html#sec9.5">HTTP RFC - 9.5 POST</a>
+     * @see <a
+     *      href="http://www.w3.org/Protocols/rfc2616/rfc2616-sec9.html#sec9.5">HTTP
+     *      RFC - 9.5 POST</a>
      */
     public static final Method POST = new Method(
             "POST",
@@ -150,7 +170,9 @@ public final class Method extends Metadata {
      * Retrieves properties defined on the resource identified by the request
      * URI.
      * 
-     * @see <a href="http://www.webdav.org/specs/rfc2518.html#METHOD_PROPFIND">WEBDAV RFC - 8.1 PROPFIND</a>
+     * @see <a
+     *      href="http://www.webdav.org/specs/rfc2518.html#METHOD_PROPFIND">WEBDAV
+     *      RFC - 8.1 PROPFIND</a>
      */
     public static final Method PROPFIND = new Method(
             "PROPFIND",
@@ -161,7 +183,9 @@ public final class Method extends Metadata {
      * Processes instructions specified in the request body to set and/or remove
      * properties defined on the resource identified by the request URI.
      * 
-     * @see <a href="http://www.webdav.org/specs/rfc2518.html#METHOD_PROPPATCH">WEBDAV RFC - 8.2 PROPPATCH</a>
+     * @see <a
+     *      href="http://www.webdav.org/specs/rfc2518.html#METHOD_PROPPATCH">WEBDAV
+     *      RFC - 8.2 PROPPATCH</a>
      */
     public static final Method PROPPATCH = new Method(
             "PROPPATCH",
@@ -172,7 +196,9 @@ public final class Method extends Metadata {
      * Requests that the enclosed entity be stored under the supplied request
      * URI.
      * 
-     * @see <a href="http://www.w3.org/Protocols/rfc2616/rfc2616-sec9.html#sec9.6"HTTP RFC - 9.6 PUT</a>
+     * @see <a
+     *      href="http://www.w3.org/Protocols/rfc2616/rfc2616-sec9.html#sec9.6"
+     *      HTTP RFC - 9.6 PUT</a>
      */
     public static final Method PUT = new Method(
             "PUT",
@@ -183,7 +209,9 @@ public final class Method extends Metadata {
      * Used to invoke a remote, application-layer loop-back of the request
      * message.
      * 
-     * @see <a href="http://www.w3.org/Protocols/rfc2616/rfc2616-sec9.html#sec9.8">HTTP RFC - 9.8 TRACE</a>
+     * @see <a
+     *      href="http://www.w3.org/Protocols/rfc2616/rfc2616-sec9.html#sec9.8">HTTP
+     *      RFC - 9.8 TRACE</a>
      */
     public static final Method TRACE = new Method(
             "TRACE",
@@ -194,7 +222,9 @@ public final class Method extends Metadata {
      * Removes the lock identified by the lock token from the request URI, and
      * all other resources included in the lock.
      * 
-     * @see <a href="http://www.webdav.org/specs/rfc2518.html#METHOD_UNLOCK">WEBDAV RFC - 8.11 UNLOCK Method</a>
+     * @see <a
+     *      href="http://www.webdav.org/specs/rfc2518.html#METHOD_UNLOCK">WEBDAV
+     *      RFC - 8.11 UNLOCK Method</a>
      */
     public static final Method UNLOCK = new Method(
             "UNLOCK",
@@ -316,6 +346,16 @@ public final class Method extends Metadata {
         return (getName() == null) ? 0 : getName().hashCode();
     }
 
+    /**
+     * Sets the URI of the specification describing the method.
+     * 
+     * @param uri
+     *            The URI of the specification describing the method.
+     * 
+     * @deprecated Method instances are shared by all Restlet applications and
+     *             shouldn't be modifiable.
+     */
+    @Deprecated
     public void setUri(String uri) {
         this.uri = uri;
     }
